--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,5 +60,5 @@ post_build = 'task clear'
 post_test = 'task clear'
 
 [build-system]
-requires = ['poetry-core>=1.0.0', 'cython']
-build-backend = 'poetry.core.masonry.api'
+requires = ['poetry==1.0.10', 'cython']
+build-backend = 'poetry.masonry.api'
